<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="297dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="235dp"
        android:background="@drawable/rectangle_round_textbox"
        android:ems="10"
        android:hint="@string/layout_login_email_placeholder"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="297dp"
        android:layout_height="44dp"
        android:layout_alignStart="@+id/loginEmail"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="179dp"
        android:background="@drawable/rectangle_round_textbox"
        android:ems="10"
        android:hint="@string/layout_login_password_placeholder"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="175dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="179dp"
        android:layout_marginLeft="179dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="134dp"
        android:background="@android:color/transparent"
        android:gravity="end|center_vertical"
        android:text="@string/layout_login_forgot_password"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:layout_marginBottom="38dp"
        android:background="@drawable/rectangle_round"
        android:text="@string/button_login" />


</RelativeLayout>