<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_top"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/layout_about_page_contact"
            android:textAlignment="viewStart"
            android:textColor="#3E3E3E"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/layout_about_page_email"
            android:textAlignment="viewStart"
            android:textColor="#3E3E3E"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:elevation="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/jadylogo_254" />

        <com.github.florent37.diagonallayout.DiagonalLayout
            android:id="@+id/diagonal_layout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:elevation="10dp"
            app:diagonal_angle="20"
            app:diagonal_direction="left"
            app:diagonal_position="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/kenBurnsView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_about_page" />

            <ImageButton
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/back_button_circular_white_100px" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="105dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/layout_about_page_sub_title"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/layout_about_page_title"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

        </com.github.florent37.diagonallayout.DiagonalLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/constraint_layout_bottom"
        android:layout_below="@id/constraint_layout_top"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:text="@string/layout_about_page_content"
                    android:textAllCaps="false"
                    android:textColor="#717171" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp">

        <Button
            android:id="@+id/buttonContact"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/contact_us_button"
            android:text="@string/button_contact_us"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonManual"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@drawable/contact_us_button"
            android:text="@string/button_user_manual"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toTopOf="@+id/buttonContact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>